--- a/qiyexiaohao/my.html
+++ b/qiyexiaohao/my.html
@@ -5,11 +5,15 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../css/mui.min.css" rel="stylesheet" />
+		<link href="css/mui.min.css" rel="stylesheet" />
 	</head>
 
 	<body>
-		<script src="../js/mui.min.js"></script>
+		<div class="mui-input-row mui-search">
+		    <input type="search" class="mui-input-clear" placeholder="">
+		</div>
+		
+		<script src="js/mui.min.js"></script>
 		<script type="text/javascript">
 			mui.init()
 		</script>
