--- a/qiyexiaohao/sendMsg.html
+++ b/qiyexiaohao/sendMsg.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<title>发送短信</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../css/mui.min.css" rel="stylesheet" />
+		<link href="css/mui.min.css" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -17,11 +17,12 @@
 		    
 		</div>
 	</body>
-	<script src="../js/mui.min.js"></script>
-	<script type="text/javascript" src="../js/vue.min.js"></script>
-	<script type="text/javascript" src="../js/vue-html5plus.js"></script>
-	<script type="text/javascript" src="../js/vue-tap.js"></script>
-	<script type="text/javascript" src="../js/mint-ui.min.js"></script>
+	<script src="js/mui.min.js"></script>
+	<script type="text/javascript" src="js/vue.min.js"></script>
+	<script type="text/javascript" src="js/vue-html5plus.js"></script>
+	<script type="text/javascript" src="js/vue-tap.js"></script>
+	<script type="text/javascript" src="js/mint-ui.min.js"></script>
+	<script type="text/javascript" src="js/common.js" ></script>
 	<script type="text/javascript">
 		(function(_, w, u) {
 			App({
