--- a/qiyexiaohao/msg1.html
+++ b/qiyexiaohao/msg1.html
@@ -3,10 +3,11 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>发送短信</title>
+		<title>全部信息</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="css/mint-ui-style.css" />
+		<link rel="stylesheet" href="css/common.css" />
 		<style>
 			.i_flag {
 				background: #2AC845;
@@ -27,104 +28,181 @@
 			<header class="mui-bar mui-bar-nav">
 				<a @tap="toggleTopP()" class="mui-action-menu mui-icon mui-icon-bars mui-pull-left"></a>
 				<h1 class="mui-title">全部信息</h1>
-				<a @tap="toAdd()" class="mui-icon mui-icon-plus mui-pull-right"></a>
+				<a @tap="toAdd()" class="mui-icon mui-icon-plusempty mui-pull-right"></a>
 			</header>
 			<div class="mui-content mui-scroll-wrapper mui-fullscreen">
 				<div class="mui-scroll">
-					<!--<form class="mui-input-group">
-						<div class="mui-input-row mui-search">
-							<input v-model="searchValue" id="search" type="search" class="mui-input-clear" placeholder="">
-						</div>
-					</form>-->
 					<form class="mui-input-group" @submit.prevent="search">
 						<mt-search v-model="searchValue" cancel-text="取消" placeholder="搜索"></mt-search>
 					</form>
 					<ul class="mui-table-view mui-table-view-striped mui-table-view-condensed">
 						<li class="mui-table-view-cell">
-							<div class="mui-table">
-								<div class="mui-table-cell mui-col-xs-8">
-									<h4 class="mui-ellipsis">王琦</h4>
-									<p class="mui-h6 mui-ellipsis"><span class="i_flag">主号</span>晒偶发还沙发煎熬束带结发欧帕斯</p>
-								</div>
-								<div class="mui-table-cell mui-col-xs-4 mui-text-right">
-									<span class="mui-h5">下午14:25</span>
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
 								</div>
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
-							<div class="mui-table">
-								<div class="mui-table-cell mui-col-xs-8">
-									<h4 class="mui-ellipsis">王琦</h4>
-									<p class="mui-h6 mui-ellipsis"><span class="i_flag">主号</span>晒偶发还沙发煎熬束带结发欧帕斯</p>
-								</div>
-								<div class="mui-table-cell mui-col-xs-4 mui-text-right">
-									<span class="mui-h5">下午14:25</span>
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
 								</div>
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
-							<div class="mui-table">
-								<div class="mui-table-cell mui-col-xs-8">
-									<h4 class="mui-ellipsis">王琦</h4>
-									<p class="mui-h6 mui-ellipsis"><span class="i_flag">主号</span>晒偶发还沙发煎熬束带结发欧帕斯</p>
-								</div>
-								<div class="mui-table-cell mui-col-xs-4 mui-text-right">
-									<span class="mui-h5">下午14:25</span>
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
 								</div>
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
-							<div class="mui-table">
-								<div class="mui-table-cell mui-col-xs-8">
-									<h4 class="mui-ellipsis">王琦</h4>
-									<p class="mui-h6 mui-ellipsis"><span class="i_flag">主号</span>晒偶发还沙发煎熬束带结发欧帕斯</p>
-								</div>
-								<div class="mui-table-cell mui-col-xs-4 mui-text-right">
-									<span class="mui-h5">下午14:25</span>
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
 								</div>
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
-							<div class="mui-table">
-								<div class="mui-table-cell mui-col-xs-8">
-									<h4 class="mui-ellipsis">王琦</h4>
-									<p class="mui-h6 mui-ellipsis"><span class="i_flag">主号</span>晒偶发还沙发煎熬束带结发欧帕斯</p>
-								</div>
-								<div class="mui-table-cell mui-col-xs-4 mui-text-right">
-									<span class="mui-h5">下午14:25</span>
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
 								</div>
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
-							<div class="mui-table">
-								<div class="mui-table-cell mui-col-xs-8">
-									<h4 class="mui-ellipsis">王琦</h4>
-									<p class="mui-h6 mui-ellipsis"><span class="i_flag">主号</span>晒偶发还沙发煎熬束带结发欧帕斯</p>
-								</div>
-								<div class="mui-table-cell mui-col-xs-4 mui-text-right">
-									<span class="mui-h5">下午14:25</span>
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
 								</div>
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
-							<div class="mui-table">
-								<div class="mui-table-cell mui-col-xs-8">
-									<h4 class="mui-ellipsis">王琦</h4>
-									<p class="mui-h6 mui-ellipsis"><span class="i_flag">主号</span>晒偶发还沙发煎熬束带结发欧帕斯</p>
-								</div>
-								<div class="mui-table-cell mui-col-xs-4 mui-text-right">
-									<span class="mui-h5">下午14:25</span>
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
 								</div>
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
-							<div class="mui-table">
-								<div class="mui-table-cell mui-col-xs-8">
-									<h4 class="mui-ellipsis">王琦</h4>
-									<p class="mui-h6 mui-ellipsis"><span class="i_flag">主号</span>晒偶发还沙发煎熬束带结发欧帕斯</p>
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
 								</div>
-								<div class="mui-table-cell mui-col-xs-4 mui-text-right">
-									<span class="mui-h5">下午14:25</span>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="mui-table-view-cell">
+							<div class="mui-slider-right mui-disabled">
+								<a class="mui-btn mui-btn-red">删除</a>
+							</div>
+							<div class="mui-slider-handle">
+								<div class="mui-table">
+									<div class="mui-table-cell mui-col-xs-9">
+										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+									</div>
+									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
+										<div class="mui-h5">下午14:25</div>
+										<div class="mui-badge mui-badge-danger">15</div>
+									</div>
 								</div>
 							</div>
 						</li>
@@ -173,14 +251,14 @@
 					search: function() {
 						console.log("value=======" + self.searchValue);
 					},
-					filterList:function(type,title){
+					filterList: function(type, title) {
 						console.log("type====" + type);
 						self.title = title;
 						self.popupVisible = false;
-						if( 0 == type){//全部
-							
-						}else{//副号
-							
+						if(0 == type) { //全部
+
+						} else { //副号
+
 						}
 					},
 					toggleTopP: function() {
@@ -189,17 +267,22 @@
 				},
 				domReady: function() {
 					_.init(), _(".mui-scroll-wrapper").scroll();
-					//搜索
-					//					document.getElementById("search").addEventListener('keypress', function(e) {
-					//						if(e.keyCode == "13") {
-					//							//TODO submitSearch
-					//							document.activeElement.blur();
-					//							e.preventDefault(); // 阻止默认事件
-					//						}
-					//					})
 				}
 			})
-
+			_('#app').on('tap', '.mui-btn', function(event) {//删除短信
+				var elem = this;
+				var li = elem.parentNode.parentNode;
+				_.confirm('确认删除该条记录？', '提示', btnArray, function(e) {
+					if(e.index == 0) {
+						li.parentNode.removeChild(li);
+					} else {
+						setTimeout(function() {
+							_.swipeoutClose(li);
+						}, 0);
+					}
+				});
+			});
+			var btnArray = ['确认', '取消'];
 		})(mui, window, util)
 	</script>
 
