--- a/qiyexiaohao/addContact.html
+++ b/qiyexiaohao/addContact.html
@@ -6,46 +6,104 @@
 		<title>添加联系人</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="css/mint-ui-style.css" />
+		<link rel="stylesheet" href="css/common.css" />
+		<style>
+			.mg5 {
+				margin: 5px 0;
+			}
+			.form_bottom .mui-input-group:before,.form_bottom .mui-input-group:after,.form_bottom .mui-table-view:before,.form_bottom .mui-table-view:after,.form_bottom .mui-input-group .mui-input-row:after{
+				height: 0;
+			}
+			.bottom_del_div {
+				position: fixed;
+				bottom: 0;
+				z-index: 9;
+			}
+		</style>
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">新增联系人</h1>
-		</header>
-		<div id="app" class="mui-content">
-		    <button @tap="addContact">添加</button>
+		<div id="app">
+			<header class="mui-bar mui-bar-nav">
+				<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+				<h1 class="mui-title">新增联系人</h1>
+				<button @tap="addContact()" class="mui-btn-link mui-pull-right">保存</button>
+			</header>
+			<div class="mui-content mui-fullscreen mui-scroll-wrapper">
+				<div class="mui-scroll">
+					<form class="mui-input-group">
+						<div class="mui-input-row">
+							<input type="text" class="mui-input-clear" placeholder="姓名">
+						</div>
+						<div class="mui-input-row">
+							<input type="text" class="mui-input-clear" placeholder="公司">
+						</div>
+						<div class="mui-input-row">
+							<input type="text" class="mui-input-clear" placeholder="职位">
+						</div>
+					</form>
+					<div class="form_bottom">
+						<form class="mui-input-group mg5">
+							<div class="mui-input-row">
+								<label class="font_15">手机</label>
+								<input type="tel" class="mui-input-clear" maxlength="11">
+							</div>
+						</form>
+						<form class="mui-input-group mg5">
+							<div class="mui-input-row">
+								<label class="font_15">电话</label>
+								<input type="tel" class="mui-input-clear" maxlength="15">
+							</div>
+						</form>
+						<ul class="mui-table-view">
+							<li class="mui-table-view-cell">
+								<a class="mui-navigate-right font_15">副号分组</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<button @tap="toAdd()" type="button" class="bottom_del_div mui-btn mui-btn-block">添加更多选项</button>
+			</div>
 		</div>
 	</body>
 	<script src="js/mui.min.js"></script>
 	<script type="text/javascript" src="js/vue.min.js"></script>
 	<script type="text/javascript" src="js/vue-html5plus.js"></script>
 	<script type="text/javascript" src="js/mint-ui.min.js"></script>
-	<script type="text/javascript" src="js/common.js" ></script>
+	<script type="text/javascript" src="js/common.js"></script>
 	<script type="text/javascript">
 		(function(_, w, u) {
 			App({
 				el: '#app',
-				data: {
-				},
+				data: {},
 				plusReady: {
 					init: function() {
 						self = this;
 					}
 				},
 				methods: {
-					addContact:function(givenName,phoneNumbers){//往通讯录添加新联系人
-						plus.contacts.getAddressBook( plus.contacts.ADDRESSBOOK_PHONE, function( addressbook ) {
+					addContact: function(givenName, phoneNumbers) { //往通讯录添加新联系人
+						plus.contacts.getAddressBook(plus.contacts.ADDRESSBOOK_PHONE, function(addressbook) {
 							// 向通讯录中添加联系人
 							var contact = addressbook.create();
-							contact.name = {givenName:"王安"};
-							contact.phoneNumbers = [{type:"手机",value:"88888888",preferred:true}];
+							contact.name = {
+								givenName: "王安"
+							};
+							contact.phoneNumbers = [{
+								type: "手机",
+								value: "88888888",
+								preferred: true
+							}];
 							contact.save();
-							
+
 							//TODO 更新联系人列表
-						}, function ( e ) {
-							alert( "Get address book failed: " + e.message );
-						} );
+						}, function(e) {
+							alert("Get address book failed: " + e.message);
+						});
+					},
+					toAdd:function(){
+						
 					}
 				},
 				domReady: function() {
