--- a/qiyexiaohao/my.html
+++ b/qiyexiaohao/my.html
@@ -3,16 +3,96 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>添加联系人</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="css/mint-ui-style.css" />
+		<link rel="stylesheet" href="css/common.css" />
+		<style>
+			.mg5 {
+				margin: 5px 0;
+			}
+			.form_bottom .mui-input-group:before,.form_bottom .mui-input-group:after,.form_bottom .mui-table-view:before,.form_bottom .mui-table-view:after,.form_bottom .mui-input-group .mui-input-row:after{
+				height: 0;
+			}
+			.bottom_del_div {
+				position: fixed;
+				bottom: 0;
+				z-index: 9;
+			}
+			#middleP {
+				top: 0 !important;
+				left: 0 !important;
+				right: 0 !important;
+				bottom: 0 !important;
+				margin: auto;
+				height: 100px;
+			}
+		</style>
 	</head>
 
 	<body>
+		<div id="app">
+			<header class="mui-bar mui-bar-nav">
+				<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+				<h1 class="mui-title">我的副号</h1>
+				<a @tap="openView('center/setting.html')" class="mui-icon mui-icon-gear mui-pull-right"></a>
+			</header>
+			<div class="mui-content mui-fullscreen mui-scroll-wrapper">
+				<div class="mui-scroll">
+					<form class="mui-input-group">
+					</form>
+				</div>
+			</div>
+		</div>
 	</body>
 	<script src="js/mui.min.js"></script>
+	<script type="text/javascript" src="js/vue.min.js"></script>
+	<script type="text/javascript" src="js/vue-html5plus.js"></script>
+	<script type="text/javascript" src="js/mint-ui.min.js"></script>
+	<script type="text/javascript" src="js/common.js"></script>
 	<script type="text/javascript">
-		mui.init()
+		(function(_, w, u) {
+			App({
+				el: '#app',
+				data: {},
+				plusReady: {
+					init: function() {
+						self = this;
+					}
+				},
+				methods: {
+					addContact: function(givenName, phoneNumbers) { //往通讯录添加新联系人
+						plus.contacts.getAddressBook(plus.contacts.ADDRESSBOOK_PHONE, function(addressbook) {
+							// 向通讯录中添加联系人
+							var contact = addressbook.create();
+							contact.name = {
+								givenName: "王安"
+							};
+							contact.phoneNumbers = [{
+								type: "手机",
+								value: "88888888",
+								preferred: true
+							}];
+							contact.save();
+
+							//TODO 更新联系人列表
+						}, function(e) {
+							alert("Get address book failed: " + e.message);
+						});
+					},
+					toAdd:function(){
+						
+					},
+					openView:function(url){
+						w.openView(url);
+					}
+				},
+				domReady: function() {
+					_.init();
+				}
+			})
+		})(mui, window, util)
 	</script>
 
 </html>
